fixed spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -23,10 +23,6 @@ html {
   width: 100%;
 }
 
-a {
-  width: 100%;
-}
-
 .rel {
   position: relative;
 }
@@ -44,6 +40,10 @@ a {
 
 .title:hover {
 
+}
+
+.space {
+  margin-bottom: -1em;
 }
 
 .banner {
