--- a/css/modules.css
+++ b/css/modules.css
@@ -42,6 +42,7 @@ template {
 
 img {
   border: 0;
+  width: 100%;
 }
 
 .img-flex {
